// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardItem should match snapshot Component 1`] = `
.emotion-0 {
  border-radius: 80px;
  position: relative;
  cursor: pointer;
  -webkit-background-position: center;
  background-position: center;
  -webkit-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  max-width: 590px;
  min-height: 90px;
  background-color: #FFF;
  box-shadow: 6px 6px 0px 0px #000000;
  border: 1px solid #090808;
  border-radius: 20px;
}

.emotion-0 img {
  display: block;
  width: 100%;
  object-fit: cover;
  border-radius: inherit;
}

.emotion-0:hover,
.emotion-0:active {
  box-shadow: 6px 6px 8px 0px #921FED;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    variant="primary"
  />
</div>
`;

exports[`CardItem should match snapshot Component 2`] = `
.emotion-0 {
  border-radius: 40px;
  position: relative;
  cursor: pointer;
  -webkit-background-position: center;
  background-position: center;
  -webkit-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  max-width: 590px;
  min-height: 90px;
  background-color: #FFF;
  box-shadow: 3px 3px 0px 0px #000000;
  border: unset;
  border-radius: 10px;
}

.emotion-0 img {
  display: block;
  width: 100%;
  object-fit: cover;
  border-radius: inherit;
}

.emotion-0:hover,
.emotion-0:active {
  box-shadow: 3px 3px 0px 0px #000000;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    variant="smallRadiusBorder"
  />
</div>
`;

exports[`CardItem should match snapshot Component 3`] = `
.emotion-0 {
  border-radius: 160px;
  position: relative;
  cursor: pointer;
  -webkit-background-position: center;
  background-position: center;
  -webkit-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  max-width: 590px;
  min-height: 90px;
  background-color: #FFF;
  box-shadow: 6px 6px 0px 0px #000000;
  border: 1px solid #090808;
  border-radius: 40px;
}

.emotion-0 img {
  display: block;
  width: 100%;
  object-fit: cover;
  border-radius: inherit;
}

.emotion-0:hover,
.emotion-0:active {
  box-shadow: 6px 6px 8px 0px #921FED;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    variant="bigRadiusBorder"
  />
</div>
`;
